Fix dbus-glib version requirement
[rpm] Fix dbus-glib version requirement

--- a/rpm/udisks2.yaml
+++ b/rpm/udisks2.yaml
@@ -43,7 +43,7 @@ PkgConfigBR:
     - systemd
     - udev >= %{udev_version}
     - dbus-1 >= %{dbus_version}
-    - dbus-glib-1 >= %{dbus_version}
+    - dbus-glib-1 >= %{dbus_glib_version}
     - libparted >= %{parted_version}
     - devmapper >= %{device_mapper_version}
     - libxslt
