Add gnome-common to build requires
[rpm] Add gnome-common to build requires

--- a/rpm/udisks2.yaml
+++ b/rpm/udisks2.yaml
@@ -29,6 +29,7 @@ Macros:
 PkgBR:
     - gobject-introspection-devel
     - intltool
+    - gnome-common
     - libacl-devel
     - python
     - sg3_utils-devel >= %{sg3_utils_version}
