Reconfigure instead of running autogen.sh
autogen.sh requires gtk-doc which we don't have on Maui.

[rpm] Reconfigure instead of running autogen.sh

--- a/rpm/udisks2.yaml
+++ b/rpm/udisks2.yaml
@@ -63,7 +63,7 @@ Provides:
 Conflicts:
     - kernel < 2.6.26
 
-Configure: autogen
+Configure: reconfigure
 ConfigOptions:
      - --disable-man-pages
      - --disable-man
