Try removing gtk-doc requirement
gnome-autogen.sh needs it because configure.ac has a GTK_DOC_CHECK
macro, so we remove it and see if that works.

[rpm] Try removing gtk-doc requirement

--- a/rpm/udisks2.yaml
+++ b/rpm/udisks2.yaml
@@ -63,12 +63,9 @@ Provides:
 Conflicts:
     - kernel < 2.6.26
 
-Configure: reconfigure
+Configure: autogen
 ConfigOptions:
-     - --disable-man-pages
      - --disable-man
-     - --disable-gtk-doc
-     - --disable-gtk-doc-html
 Builder: make
 
 Files:
