Surrender to gtk-doc
Just imported gtk-doc into hawaii:devel:mw, I hope udisks2 will build
now.

[rpm] Add gtk-doc build dependency

--- a/rpm/udisks2.yaml
+++ b/rpm/udisks2.yaml
@@ -48,6 +48,7 @@ PkgConfigBR:
     - libparted >= %{parted_version}
     - devmapper >= %{device_mapper_version}
     - libxslt
+    - gtk-doc
 Requires:
     - dbus >= %{dbus_version}
     - udev >= %{udev_version}
