Fix systemd unit and udev rules installation
[rpm] Fix systemd unit and udev rules installation

--- a/rpm/udisks2.yaml
+++ b/rpm/udisks2.yaml
@@ -74,8 +74,8 @@ Files:
     - "%dir %{_sysconfdir}/udisks2"
     - "%{_sysconfdir}/dbus-1/system.d/org.freedesktop.UDisks2.conf"
     - "%{_datadir}/bash-completion/completions/udisksctl"
-    - "%{_prefix}/lib/systemd/system/udisks2.service"
-    - "%{_prefix}/lib/udev/rules.d/80-udisks2.rules"
+    - "/lib/systemd/system/udisks2.service"
+    - "/lib/udev/rules.d/80-udisks2.rules"
     - "%{_sbindir}/umount.udisks2"
     - "%dir %{_prefix}/lib/udisks2"
     - "%{_prefix}/lib/udisks2/udisksd"
